--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -1,4 +1,20 @@
 <head>
-    <link rel="stylesheet" href="../style.css">
+    <title>Basic Scene Prototype</title>
+
+    <link rel="stylesheet" href="style.css">
+
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://ga.jspm.io/npm:three@0.158.0/build/three.module.js"
+            }
+        }
+    </script>
+
+    <script src="script.js" type="module"></script>
 </head>
-Week 3 prototype goes here
+<body>
+    <h1>Three.js basic scene</h1>
+
+    <canvas class="webgl"></canvas>
+</body>
