Add flatland prototype

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         <li>week 3. <a href="Week 3/index.html">First scene</a></li>
-        <li>week 4. <a href="">Flatland</a></li>
+        <li>week 4. <a href="Week 4/index.html">Flatland</a></li>
         <li>week 5. <a href="">Plato</a></li>
         <li>week 8. <a href="">3D Portfolio</a></li>
         <li>week 10. <a href="">Data Visualization</a></li>
