--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h2>Assignments</h2>
     <ol>
-        <li>week 7. <a href="">Interactive essay</a></li>
+        <li>week 7. <a href="Assignment 1/index.html">Interactive essay</a></li>
         <li>week 12. <a href="">Data visualization</a></li>
     </ol>
 </body>
