--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -29,9 +29,9 @@
     <section id="part-one">
         <h2>1. Flatness</h2>
 
-        <p>First paragraph suddenly,<span class="clickable" id="first-change"> the object began to move</span>.</p>
+        <p>First paragraph suddenly,<span class="clickable" id="first-change"> the god's eye began to look around the room</span> and then, <span class="clickable" id="second-change">the god closed its eye </span>.</p>
 
-        <p>Second paragraph and then,<span class="clickable" id="second-change"> the object dissapeared</span>.</p>
+        <p>Second paragraph.</p>
 
         <p><span class="clickable" id="continue-reading">Continue reading</span></p>
     </section>
@@ -41,9 +41,9 @@
 
         <h2>2. Seeing Double</h2>
 
-        <p>First paragraph but then,<span class="clickable" id="third-change"> the object came to rest</span>.</p>
+        <p>First paragraph but then,<span class="clickable" id="third-change"> one of the people holding the objects dropped some</span>.</p>
 
-        <p>Second paragraph and then,<span class="clickable" id="fourth-change"> the sun began to set behind it,</span> mystifying the people in the cave.</p>
+        <p>Second paragraph and then, the sun began to set behind it, mystifying the people in the cave.</p>
 
         <p><span class="clickable" id="restart">Restart</span></p>
     </section>
