--- a/Week 8/index.html
+++ b/Week 8/index.html
@@ -31,21 +31,19 @@
     <!-- content -->
     <section class="content" id="first">
         <h1>About me</h1>
-        <p>A short bio goes here.</p>
+        <p>I am an Interactive Arts and Sciences major at Brock University. I have been coding in school for 3 years.</p>
         <p><span class="clickable" id="click1">View Projects.</span></p>
-
     </section>
 
     <section class="content hidden" id="second">
         <h1>Interactive Essay</h1>
-        <p>About this project.</p>
+        <p>The goal of this project was to translate Plato's allegory of the cave into a scene. It also was to describe the concepts of flatness and seeing double.</p>
         <p><span class="clickable" id="click2">Next project</span></p>
-
     </section>
 
     <section class="content hidden" id="third">
         <h1>Data Visualization</h1>
-        <p>About this project</p>
+        <p>For this project I am going to do the first book of the Septimus Heap series - Magyk.</p>
         <p><span class="clickable" id="click3">Back to home</span></p>
 
     </section>
