--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li>week 4. <a href="Week 4/index.html">Flatland</a></li>
         <li>week 5. <a href="Week 5/index.html">Plato</a></li>
         <li>week 8. <a href="Week 8/index.html">3D Portfolio</a></li>
-        <li>week 10. <a href="">Data Visualization</a></li>
+        <li>week 9. <a href="Week 9/index.html">Data Visualization</a></li>
     </ul>
 
     <h2>Assignments</h2>
