--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <h2>Assignments</h2>
     <ol>
         <li>week 7. <a href="Assignment 1/index.html">Interactive essay</a></li>
-        <li>week 12. <a href="">Data visualization</a></li>
+        <li>week 12. <a href="Assignment 2/index.html">Data visualization Assignment</a></li>
     </ol>
 </body>
